@@ -17,7 +17,9 @@ documents those changes that are of interest to users and admins.
     on the other nodes.
  -- Fixed sview and sacct to display correct run time and suspend time when 
     job has been suspended.
- 
+ -- Applied patch from Mark Grondona that fixes the validation of the
+    PluginDir to support the colon separated list of directories as documented.
+
 * Changes in SLURM 2.0.7
 ========================
  -- Fix bug in select/cons_res when nodes are configured in more than one 
